===============================================================================
Tag Creator: jedwards
Developers:  jedwards
Tag Date:    17 Aug 2017
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20170817
Tag Summary: update config_component.xml to version 3.0 format
	removed unused optional cdf64 variable in io_pio.F90
Testing:     aux_pop on cheyenne run successfully

M          cime_config/config_component.xml
M          source/io_pio.F90


===============================================================================
Tag Creator: jedwards
Developers:  jedwards
Tag Date:    8 Aug 2017
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20170808
Tag Summary: Change DICE%SIAF to DICE%IAF in config_compsets.xml
	Replace namelist variable luse_nf_64bit_offset with pio_netcdf_format flag provided from
	shr_pio_mod.F90 and set in xml using PIO_NETCDF_FORMAT with values 'classic' '64bit_offset', '64bit_data'

Testing:     aux_pop on yellowstone run successfully

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop.xml
M       bld/namelist_files/namelist_definition_pop.xml
M       cime_config/config_compsets.xml
M       source/io_netcdf.F90
M       source/io_pio.F90
M       source/io_types.F90

===============================================================================
Tag Creator: altuntas
Developers:  klindsay
Tag Date:    25 July 2017
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20170725
Tag Summary: Added mods for getting _FillValue where land block elimination occurs

Testing:     aux_pop on cheyenne, run successfully
             bit-for-bit

Files Modified:
M       source/io.F90
M       source/io_netcdf.F90
M       source/tavg.F90
===============================================================================
Tag Creator: altuntas
Developers:  altuntas
Tag Date:    10 July 2017
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20170710
Tag Summary: Moved aux_pop g16 tests to g17