@@ -58,7 +58,7 @@
       <pes pesize="any" compset="_DATM.*_POP2">
         <comment>gx3v7 resolution on yellowstone</comment>
         <MAX_TASKS_PER_NODE>16</MAX_TASKS_PER_NODE>
-        <PES_PER_NODE>16</PES_PER_NODE>
+        <MAX_MPITASKS_PER_NODE>16</MAX_MPITASKS_PER_NODE>
         <ntasks>
           <ntasks_ocn>32</ntasks_ocn>
           <ntasks_ice>32</ntasks_ice>
@@ -259,7 +259,7 @@
            all other components share 16x1 -->
       <pes pesize="any" compset="_DATM.*_DICE.*_POP2[^%]">
         <MAX_TASKS_PER_NODE>16</MAX_TASKS_PER_NODE>
-        <PES_PER_NODE>16</PES_PER_NODE>
+        <MAX_MPITASKS_PER_NODE>16</MAX_MPITASKS_PER_NODE>
         <comment>C; gx1v6, gx1v7, or tx1v1 resolution on yellowstone</comment>
         <ntasks>
           <ntasks_ocn>128</ntasks_ocn>
@@ -298,7 +298,7 @@
            all other components share 16x1 -->
       <pes pesize="any" compset="_DATM.*_DICE.*_POP2%ECO">
         <MAX_TASKS_PER_NODE>16</MAX_TASKS_PER_NODE>
-        <PES_PER_NODE>16</PES_PER_NODE>
+        <MAX_MPITASKS_PER_NODE>16</MAX_MPITASKS_PER_NODE>
         <comment>C+ECO (e.g., C1850ECO); gx1v6, gx1v7, or tx1v1 resolution on yellowstone</comment>
         <ntasks>
           <ntasks_ocn>432</ntasks_ocn>
@@ -338,7 +338,7 @@
            All other components share 16x1 -->
       <pes pesize="any" compset="_DATM.*_CICE.*_POP2[^%]">
         <MAX_TASKS_PER_NODE>16</MAX_TASKS_PER_NODE>
-        <PES_PER_NODE>16</PES_PER_NODE>
+        <MAX_MPITASKS_PER_NODE>16</MAX_MPITASKS_PER_NODE>
         <comment>G; gx1v6, gx1v7, or tx1v1 resolution on yellowstone</comment>
         <ntasks>
           <ntasks_ocn>128</ntasks_ocn>
@@ -378,7 +378,7 @@
            everyone else shares 16x1 on yellowstone-->
       <pes pesize="any" compset="_DATM.*_CICE.*_POP2%ECO">
         <MAX_TASKS_PER_NODE>16</MAX_TASKS_PER_NODE>
-        <PES_PER_NODE>16</PES_PER_NODE>
+        <MAX_MPITASKS_PER_NODE>16</MAX_MPITASKS_PER_NODE>
         <comment>G+ECO (e.g., G1850ECO); gx1v6, gx1v7, or tx1v1 resolution on yellowstone</comment>
         <ntasks>
           <ntasks_ocn>432</ntasks_ocn>
